--- a/Level1_Task1_Portfolio/index.html
+++ b/Level1_Task1_Portfolio/index.html
@@ -7,23 +7,27 @@
 </head>
 <body>
 
-    <!-- Header -->
     <header>
         <h1>Kathrine Danica M</h1>
-        <p>CSE Student | Aspiring Web Developer</p>
+        <p>CSE Student | Web Developer</p>
     </header>
 
-    <!-- About Section -->
+    <nav>
+        <a href="#about">About</a>
+        <a href="#skills">Skills</a>
+        <a href="#projects">Projects</a>
+        <a href="#contact">Contact</a>
+    </nav>
+
     <section id="about">
         <h2>About Me</h2>
         <p>
-            I am a 2nd year Computer Science Engineering student with knowledge of
-            C, Python, Java, C++ and basic web development. I am passionate about
-            learning new technologies and building simple, user-friendly websites.
+            I am a Computer Science Engineering student with interest in
+            web development and programming. I am eager to learn new
+            technologies and build real-world projects.
         </p>
     </section>
 
-    <!-- Skills Section -->
     <section id="skills">
         <h2>Skills</h2>
         <ul>
@@ -35,29 +39,20 @@
         </ul>
     </section>
 
-    <!-- Projects Section -->
     <section id="projects">
         <h2>Projects</h2>
-        <p><strong>Personal Portfolio Website</strong></p>
-        <p>A simple portfolio website created using HTML and CSS.</p>
+        <p>Portfolio Website (This Project)</p>
+        <p>More projects coming soon...</p>
     </section>
 
-    <!-- Resume Section -->
-    <section id="resume">
-        <h2>Resume</h2>
-        <a href="#" class="btn">Download Resume</a>
-    </section>
-
-    <!-- Contact Section -->
     <section id="contact">
         <h2>Contact</h2>
-        <p>Email: kathrinedanica@gmail.com</p>
-        <p>Phone: +91 XXXXXXXXXX</p>
+        <p>Email: kathrinedanica@email.com</p>
+        <p>LinkedIn: linkedin.com/in/kathrinedanica</p>
     </section>
 
-    <!-- Footer -->
     <footer>
-        <p>© 2025 Kathrine Danica M. All Rights Reserved.</p>
+        <p>© 2025 Kathrine Danica</p>
     </footer>
 
 </body>
